# fern

./: .gitignore  Cargo.toml  NOTES  README.md  flake.nix
crates/fern-ui/: Cargo.toml
crates/fern-web/: Cargo.toml
crates/fern-web/src/: lib.rs
crates/fern-web/src/api/: login.rs
crates/fern-web/src/gateway/: connect.rs  disconnect.rs  heartbeat.rs  utils.rs
crates/fern-web/src/gateway/dispatch/: mod.rs  presence.rs  ready.rs
src/: main.rs  structs.rs
src/api/: login.rs
src/gateway/: auth.rs  disconnect.rs  dispatch.rs  mod.rs
src/gateway/dispatch/: messages.rs  mod.rs
src/websocket/: auth.rs  connect.rs  dispatch.rs  heartbeat.rs  mod.rs  utils.rs
