[package]
name = "fern"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = "full"

# TODO: profile.release

[dependencies]
env_logger = "0.11.6"
futures-util = "0.3.31"
log = "0.4.22"
num-traits = "0.2.19"
num-derive = "0.4.2"
reqwest = { version = "0.12.9", features = [ "blocking" ] }
serde = "1.0.216"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = [ "native-tls" ] }
xilem = "0.1.0"
